# Atlas

./: pyproject.toml
.github/agents/: atlascore-foundation.agent.md
docs/: REPO_GUARDRAILS.md
domain_packs/supply_chain/: README.md  entity_types.yaml  event_types.yaml  ontology.yaml  prediction_targets.yaml  relationship_types.yaml  schema.yaml  signal_definitions.yaml
src/atlascore/: errors.py  provenance.py  validators.py
src/atlascore/contracts/: __init__.py  models.py
src/atlascore/domain_pack/: loader.py
tests/: test_contracts.py  test_domain_pack.py  test_validators.py
tests/fixtures/: sample_supply_chain.yaml
