[tool.poetry]
name = "atlascore"
version = "0.1.0"
description = "AtlasCore foundation layer (scaffold)"
authors = ["AtlasCore Team <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
